# tradingczs

./: DETAILED_PROJECT_FLOW.md  PROJECT_ANALYSIS.md  VISUAL_FLOW_DIAGRAM.md  test_status.py
TBF_V0/: __init__.py  check_token_balance.py  clean_logs.py  debug_fee_config.py  dummy_script.py  find_live_token.py  main_trader.py  module_analysis.md  test_address_performance.py  test_buy_token.py  test_console_buy.py  test_real_buy.py  test_trader.py
TBF_V0/cleanup/: __init__.py  simple_cleanup.py
TBF_V0/core/: __init__.py  pubkeys.py  simple_client.py  simple_wallet.py  token_info.py
TBF_V0/logs/: performance_report.json
TBF_V0/monitoring/: __init__.py  simple_block_listener.py
TBF_V0/pumpfun/: __init__.py  address_provider.py  curve_manager.py  event_parser.py  instruction_builder.py
TBF_V0/tests/: __init__.py  test_address_provider.py  test_all_modules.py  test_block_listener.py  test_block_listener_standalone.py  test_curve_manager.py  test_curve_standalone.py  test_event_parser.py  test_simple_client.py  test_simple_wallet.py
TBF_V0/trading/: __init__.py  position.py  simple_buyer.py  simple_seller.py  simple_tpsl_manager.py  universal_trader.py
learning-examples/: decode_from_blockSubscribe.py
rebuild_broject/: TODO.md  TODO_V0.md  TODO_simplified.md  block_listener.py  main.py  my_client.py  my_listener.py  my_token_parser.py  simple_trader.py
trading-bot-from-scratch/: DETAILED_FLOW_ANALYSIS.md  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
trading-bot-from-scratch/src/: config_loader.py
trading-bot-from-scratch/src/core/: client.py  wallet.py
trading-bot-from-scratch/src/interfaces/: core.py
trading-bot-from-scratch/src/utils/: logger.py
(+10 files in other folders)
